k8s/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenora-app
  namespace: tenora
  labels:
    app: tenora-app
spec:
  replicas: 3

  selector:
    matchLabels:
      app: tenora-app

  # Zero-downtime rolling updates
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  template:
    metadata:
      labels:
        app: tenora-app
    spec:
      containers:
      - name: tenora-app
        image: niruth03/tenora:92c067929c27ba5b69a78ddfdabc5e24678c94cc
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000

        # Inject ALL keys from the Secret as env vars
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

        # "Are you ready for traffic?" check
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 3

        # "Are you still alive?" check
        livenessProbe: # Auto recovery
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3
