k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tenora-app
  namespace: tenora
spec:
  type: ClusterIP
  selector:
    app: tenora-app     
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
