k8s/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenora-app
spec:
  ingressClassName: nginx
  rules:
    - host: tenora.ai
  http:
    paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tenora-app
            port:
              number: 3000
